# ragbase

./: .dockerignore  .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  config.py  database.py  ingest.py  llm.py  logger.py  main.py  models.py  retrieval.py
docker/: Dockerfile.backend  Dockerfile.frontend  init.sql
frontend/: app.py
tests/: __init__.py  conftest.py  test_api.py  test_ingest.py  test_retrieval.py
